--- a/po/ru.po
+++ b/po/ru.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder 2.10+git\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-07-30 22:32-0600\n"
-"PO-Revision-Date: 2021-07-13 21:51+0700\n"
+"PO-Revision-Date: 2022-08-06 21:47+0700\n"
 "Last-Translator: adasiko <adasiko256@yandex.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #: src/gpodder/config.py:53
 #, python-format
@@ -2082,14 +2082,12 @@ msgid "Transcode video files to avi/mp4/m4v"
 msgstr "Перекодировать видео файлы в avi/mp4/m4v"
 
 #: share/gpodder/extensions/youtube-dl.py:32
-#, fuzzy
-#| msgid ""
-#| "Manage Youtube subscriptions using youtube-dl (pip install youtube_dl)"
 msgid ""
 "Manage YouTube subscriptions using youtube-dl (pip install youtube_dl) or yt-"
 "dlp (pip install yt-dlp)"
 msgstr ""
-"Управление подписками Youtube с помощью youtube-dl (pip install youtube_dl)"
+"Управление подписками YouTube с помощью youtube-dl (pip install youtube_dl) "
+"или yt-dlp (pip install yt-dlp)"
 
 #: share/gpodder/extensions/youtube-dl.py:38
 #, python-format
@@ -2312,16 +2310,12 @@ msgid "Device name:"
 msgstr "Имя устройства:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:14
-#, fuzzy
-#| msgid "Replace list on server with local subscriptions"
 msgid "Replace subscription list on server with local subscriptions:"
-msgstr "Заменить список на сервере локальными подписками"
+msgstr "Заменить список на сервере локальными подписками:"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:15
-#, fuzzy
-#| msgid "Uploading subscriptions"
 msgid "Upload local subscriptions"
-msgstr "Сохранение подписок"
+msgstr "Отправка локальных подписок"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:16
 msgid "gpodder.net"
@@ -2392,10 +2386,8 @@ msgid "Only sync unplayed episodes"
 msgstr "Не синхронизировать прослушанные выпуски"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:33
-#, fuzzy
-#| msgid "Remove episodes deleted on device from gPodder"
 msgid "Remove episodes deleted in gPodder from device"
-msgstr "Удалять из gPodder эпизоды, удаленные с устройства"
+msgstr "Удалять с устройства эпизоды, удаленные в gPodder"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:34
 msgid "Devices"
@@ -2547,7 +2539,7 @@ msgstr "Всегда показывать новые выпуски"
 
 #: share/gpodder/ui/gtk/menus.ui.h:44
 msgid "Require control click to sort episodes"
-msgstr ""
+msgstr "Сортировать эпизоды с нажатым Control"
 
 #: share/gpodder/ui/gtk/menus.ui.h:45
 msgid "Visible columns"
