Fix msgstr errors in Norwegian Bokmål translation.
Fixes #1399.

--- a/po/nb.po
+++ b/po/nb.po
@@ -269,7 +269,7 @@ msgstr "MP3-spiller åpnet"
 msgid ""
 "Not enough space in %(path)s: %(free)s available, but need at least %(need)s"
 msgstr ""
-"Ikke nok ledig plass i %(path)s: %s(free)s tilgjengelig, men må være minst "
+"Ikke nok ledig plass i %(path)s: %(free)s tilgjengelig, men må være minst "
 "%(need)s"
 
 #: src/gpodder/sync.py:543
@@ -2574,7 +2574,7 @@ msgstr "Kan kunne sette løv-oppsettsnoder"
 #: bin/gpo:427
 #, python-format
 msgid "Renamed %(old_title)s to %(new_title)s."
-msgstr "Endret navn på %(old_titles)s til %(new_titles)s."
+msgstr "Endret navn på %(old_title)s til %(new_title)s."
 
 #: bin/gpo:443
 #, python-format
