Updated Dutch translation

--- a/po/nl.po
+++ b/po/nl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-25 20:23-0600\n"
-"PO-Revision-Date: 2022-07-06 14:30+0200\n"
+"PO-Revision-Date: 2022-09-26 18:20+0200\n"
 "Last-Translator: Heimen Stoffels <vistausss@fastmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.1\n"
+"X-Generator: Poedit 3.1.1\n"
 
 #: src/gpodder/config.py:53
 #, python-format
@@ -689,16 +689,12 @@ msgstr[0] "Nog %(count)d aflevering"
 msgstr[1] "Nog %(count)d afleveringen"
 
 #: src/gpodder/gtkui/main.py:1596 src/gpodder/gtkui/main.py:3199
-#, fuzzy
-#| msgid "Queued"
 msgid "Queueing"
-msgstr "In wachtrij"
+msgstr "Bezig met verplaatsen naar wachtrij"
 
 #: src/gpodder/gtkui/main.py:1597
-#, fuzzy
-#| msgid "Removing %s"
 msgid "Removing"
-msgstr "Bezig met verwijderen van %s"
+msgstr "Bezig met verwijderen"
 
 #: src/gpodder/gtkui/main.py:1729
 msgid "Start download now"
@@ -2395,10 +2391,8 @@ msgid "Software updates"
 msgstr "Software-updates"
 
 #: share/gpodder/ui/gtk/menus.ui.h:4
-#, fuzzy
-#| msgid "Open"
 msgid "Open Logs"
-msgstr "Openen"
+msgstr "Logboek openen"
 
 #: share/gpodder/ui/gtk/menus.ui.h:5
 msgid "Help"
