Update Norwegian Nynorsk translation for next release

--- a/po/nn.po
+++ b/po/nn.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-25 20:23-0600\n"
-"PO-Revision-Date: 2022-07-06 20:54+0200\n"
+"PO-Revision-Date: 2022-09-28 20:51+0200\n"
 "Last-Translator: Karl Ove Hufthammer <karl@huftis.org>\n"
 "Language-Team: Norwegian Nynorsk <l10n-no@lister.huftis.org>\n"
 "Language: nn\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 22.04.2\n"
+"X-Generator: Lokalize 22.08.1\n"
 
 #: src/gpodder/config.py:53
 #, python-format
@@ -690,16 +690,12 @@ msgstr[0] "%(count)d episode til"
 msgstr[1] "%(count)d episodar til"
 
 #: src/gpodder/gtkui/main.py:1596 src/gpodder/gtkui/main.py:3199
-#, fuzzy
-#| msgid "Queued"
 msgid "Queueing"
-msgstr "Lagd i kø"
+msgstr "Legg i kø"
 
 #: src/gpodder/gtkui/main.py:1597
-#, fuzzy
-#| msgid "Removing %s"
 msgid "Removing"
-msgstr "Fjernar %s"
+msgstr "Fjernar"
 
 #: src/gpodder/gtkui/main.py:1729
 msgid "Start download now"
@@ -2107,10 +2103,8 @@ msgstr ""
 "lasta ned manuelt frå desse nettstadane."
 
 #: share/gpodder/extensions/youtube-dl.py:527
-#, fuzzy
-#| msgid "Old youtube-dl"
 msgid "youtube-dl"
-msgstr "Gammal youtube-dl"
+msgstr "youtube-dl"
 
 #: share/gpodder/ui/gtk/gpodder.ui.h:5
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:1
@@ -2401,10 +2395,8 @@ msgid "Software updates"
 msgstr "Programoppdateringar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:4
-#, fuzzy
-#| msgid "Open"
 msgid "Open Logs"
-msgstr "Opna"
+msgstr "Opna loggar"
 
 #: share/gpodder/ui/gtk/menus.ui.h:5
 msgid "Help"
