Update Slovak translation (sk.po)

--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: gPodder\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-25 20:23-0600\n"
-"PO-Revision-Date: 2022-07-06 13:37+0200\n"
+"PO-Revision-Date: 2022-10-10 13:37+0200\n"
 "Last-Translator: Thomas Perl <m@thp.io>\n"
 "Language-Team: Slovak (http://www.transifex.com/projects/p/gpodder/language/"
 "sk/)\n"
@@ -289,7 +289,7 @@ msgstr "Zariadenie nie je možné otvoriť"
 
 #: src/gpodder/syncui.py:96
 msgid "Please check logs and the settings in the preferences dialog."
-msgstr "Skontrolujte záznam a konfiguráciu v okne Nastavenia."
+msgstr "Skontrolujte záznamy a konfiguráciu v okne Nastavenia."
 
 #: src/gpodder/syncui.py:157
 msgid "Not enough space left on device"
@@ -699,16 +699,12 @@ msgstr[1] "%(count)d ďalšie epizódy"
 msgstr[2] "%(count)d ďalších epizód"
 
 #: src/gpodder/gtkui/main.py:1596 src/gpodder/gtkui/main.py:3199
-#, fuzzy
-#| msgid "Queued"
 msgid "Queueing"
-msgstr "Zaradené do poradia"
+msgstr "Zaradenie do poradia"
 
 #: src/gpodder/gtkui/main.py:1597
-#, fuzzy
-#| msgid "Removing %s"
 msgid "Removing"
-msgstr "Odstránenie %s"
+msgstr "Odstránenie"
 
 #: src/gpodder/gtkui/main.py:1729
 msgid "Start download now"
@@ -2404,10 +2400,8 @@ msgid "Software updates"
 msgstr "Aktualizácie softvéru"
 
 #: share/gpodder/ui/gtk/menus.ui.h:4
-#, fuzzy
-#| msgid "Open"
 msgid "Open Logs"
-msgstr "Otvoriť"
+msgstr "Otvoriť záznamy"
 
 #: share/gpodder/ui/gtk/menus.ui.h:5
 msgid "Help"
