--- a/po/fr.po
+++ b/po/fr.po
@@ -2366,7 +2366,7 @@ msgstr "Ne synchroniser que les épisodes non lus"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:33
 msgid "Remove episodes deleted in gPodder from device"
-msgstr "Retirer les épisodes supprimés de gPodder du périphérique"
+msgstr "Retirer du périphérique les épisodes supprimés dans gPodder"
 
 #: share/gpodder/ui/gtk/gpodderpreferences.ui.h:34
 msgid "Devices"
