--- a/po/fr.po
+++ b/po/fr.po
@@ -872,7 +872,7 @@ msgstr "Détails de l'épisode"
 #, fuzzy
 #| msgid "Select _none"
 msgid "Select channel"
-msgstr "Sélectionner _aucun"
+msgstr "Sélectionner le Podcast de cet épisode"
 
 #: src/gpodder/gtkui/main.py:2370
 msgid "Please check your media player settings in the preferences dialog."
